<?xml version="1.0"?>
<package format="2">
  <name>takin_bringup</name>
  <version>0.0.0</version>
  <description>The takin_bringup package</description>

  <maintainer email="capra@clubcapra.com">Capra</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>

  <exec_depend>rgbd_launch</exec_depend>
  <exec_depend>astra_camera</exec_depend>
  <exec_depend>astra_launch</exec_depend>
  <exec_depend>sick_tim</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>cartographer_rviz</exec_depend>
  <export>

  </export>
</package>
