<?xml version="1.0"?>
<package format="2">
  <name>takin_description</name>
  <version>0.0.0</version>
  <description>The takin_description package</description>

  <maintainer email="capra@clubcapra.com">Capra</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
