<?xml version="1.0"?>
<package format="2">
    <name>takin_motors</name>
    <version>0.0.0</version>
    <description>
        A ROS node wrapper for communicating with Talon SRX motor controllers over CAN
    </description>

    <maintainer email="ludovicvanasse@gmail.com">Ludo</maintainer>

    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <!--<depend>dynamic_reconfigure</depend>-->
    <depend>message_generation</depend>
    <depend>message_runtime</depend>
    <depend>sensor_msgs</depend>
    <depend>takin_msgs</depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
