<?xml version="1.0"?>
<package format="2">
    <name>takin_msgs</name>
    <version>0.0.0</version>
    <description>
        This contains the messages, actions and services for Takin software projet
    </description>

    <maintainer email="ludovicvanasse@gmail.com">Ludo</maintainer>

    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>message_generation</depend>
    <depend>message_runtime</depend>
    <depend>geometry_msgs</depend>

    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>