<?xml version="1.0"?>
<package format="2">
  <name>capra</name>
  <version>0.0.0</version>
  <description>The capra package</description>

  <maintainer email="capra@clubcapra.com">Capra</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>teleop_twist_joy</depend>
  <export>

  </export>
</package>
