<?xml version="1.0"?>
<package format="2">
  <name>capra_imu</name>
  <version>0.0.0</version>
  <description>The capra_imu package</description>
  <maintainer email="capra@clubcapra.com">Capra</maintainer>

  <license>GPLv3</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>octomap</depend>
  <depend>serial</depend>
  <depend>move_base_msgs</depend>
  <depend>joy</depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
