<?xml version="1.0"?>
<package format="2">
  <name>capra_landolt_detection</name>
  <version>0.0.0</version>
  <description>The capra_landolt_detection package</description>

  <maintainer email="capra@clubcapra.com">Capra</maintainer>

  <license>GPLv3</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roslint</build_depend>
  
  <depend>image_publisher</depend>
  <depend>cv_bridge</depend>
  <depend>opencv3</depend>
  <depend>image_transport</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>capra_msgs</depend>
  
  <export>
    <nodelet plugin="${prefix}/nodelet.xml" />
  </export>
</package>
