<?xml version="1.0"?>
<package format="2">
  <name>capra_lidar</name>  <version>0.0.0</version>
  <description>The capra_lidar package</description>
  <maintainer email="islandx424@gmail.com">Marc-Olivier Belisle</maintainer>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
