<?xml version="1.0"?>
<package format="2">
  <name>capra_motors</name>
  <version>0.0.1</version>
  <description>The Capra motors package</description>

  <maintainer email="ludovicvanasse@gmail.com">ludovic</maintainer>
  <author email="ludovicvanasse@gmail.com">ludovic</author>
  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>joy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
 
  <build_export_depend>joy</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>joy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


</package>
