<?xml version="1.0"?>
<package>
  <name>capra_motors</name>
  <version>0.0.0</version>
  <description>A ROS node wrapper for communicating with Talon SRX motor controllers over CAN</description>

  <maintainer email="capra@clubcapra.com">Capra</maintainer>

  <license>GPLv3</license>
  
  <buildtool_depend>catkin</buildtool_depend>
 
  <depend>joy</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  
</package>
