<?xml version="1.0"?>
<package format="2">
    <name>capra_qrcode_detection</name>
    <version>0.0.0</version>
    <description>The capra_qrcode_detection package</description>

    <maintainer email="tonthat.quocminh@gmail.com">minh</maintainer>

    <license>GPLv2</license>

    <buildtool_depend>catkin</buildtool_depend>
  
    <build_depend>cv_bridge</build_depend>
    <build_depend>image_geometry</build_depend>
    <build_depend>opencv3</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>roscpp</build_depend>

    <build_export_depend>cv_bridge</build_export_depend>
    <build_export_depend>image_geometry</build_export_depend>
    <build_export_depend>opencv3</build_export_depend>
    <build_export_depend>image_transport</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>sensor_msgs</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>

    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>image_geometry</exec_depend>
    <exec_depend>opencv3</exec_depend>
    <exec_depend>image_transport</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>roscpp</exec_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
    <!-- Other tools can request additional information be placed here -->

    </export>
</package>
