<?xml version="1.0"?>
<package format="2">
    <name>capra_qrcode_detection</name>
    <version>0.0.0</version>
    <description>The capra_qrcode_detection package</description>
    <maintainer email="capra@clubcapra.com">Capra</maintainer>

    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>image_publisher</depend>
    <depend>zbar_ros</depend>
    <depend>cv_bridge</depend>
    <depend>image_geometry</depend>
    <depend>opencv3</depend>
    <depend>image_transport</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>roscpp</depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
    <!-- Other tools can request additional information be placed here -->

    </export>
</package>
