<?xml version="1.0"?>
<package format="2">
  <name>capra_remote_controller</name>
  <version>0.0.1</version>
  <description>The Capra remote controller package</description>
  <maintainer email="capra@clubcapra.com">Capra</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>joy</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <exec_depend>joystick_drivers</exec_depend>
  
</package>
